--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@qest/amqp-promisified",
   "version": "0.0.3",
   "description": "Simple wrapper around amqplib callback api.",
-  "main": "dist/index.js",
+  "main": "dist/src/index.js",
   "repository": "https://github.com/qest-cz/nodejs-typescript-starter.git",
   "author": "Radim Štěpaník <radim.stepanik@gmail.com>",
   "contributors": [],
