feat(all): split code to separate files, add close functionality, not open channel everytime you publish message

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Simple wrapper around amqplib callback api.",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
-  "repository": "https://github.com/qest-cz/nodejs-typescript-starter.git",
+  "repository": "https://github.com/qest-cz/amqp-promisified",
   "author": "Radim Štěpaník <radim.stepanik@gmail.com>",
   "contributors": [],
   "license": "MIT",
@@ -16,7 +16,7 @@
     "tslint:check": "tslint -c tslint.json -p .",
     "tsc:check": "tsc --noEmit",
     "dev": "cross-env NODE_ENV=dev ts-node-dev --no-notify -r dotenv/config src/index.ts dotenv_config_path=./config/.env | pino-pretty",
-    "examples:publish-subscribe": "cross-env NODE_ENV=dev ts-node-dev --no-notify -r dotenv/config src/examples/publish-subscribe.ts dotenv_config_path=./config/.env | pino-pretty",
+    "examples:publish-subscribe": "cross-env NODE_ENV=dev ts-node-dev --no-notify -r dotenv/config scripts/publish-subscribe.ts dotenv_config_path=./config/.env | pino-pretty",
     "code:fix": "concurrently \"yarn tslint:run\" \"yarn prettier:run\"",
     "code:check": "concurrently \"yarn prettier:check\" \"yarn tslint:check\" \"yarn tsc:check\"",
     "test": "cross-env TS_NODE_PROJECT=\\\"tsconfig.test.json\\\" node -r dotenv/config ./node_modules/mocha/bin/_mocha dotenv_config_path=./config/.env.test --opts mocha.opts",
