--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "tslint:run": "tslint --fix -c tslint.json -p .",
     "tslint:check": "tslint -c tslint.json -p .",
     "tsc:check": "tsc --noEmit",
-    "dev": "cross-env NODE_ENV=dev ts-node-dev --no-notify -r dotenv/config src/index.ts dotenv_config_path=./config/.env | pino-pretty",
-    "examples:publish-subscribe": "cross-env NODE_ENV=dev ts-node-dev --no-notify -r dotenv/config scripts/publish-subscribe.ts dotenv_config_path=./config/.env | pino-pretty",
+    "examples:publish-subscribe": "cross-env NODE_ENV=dev ts-node-dev --no-notify -r dotenv/config scripts/publish-subscribe.ts dotenv_config_path=./config/.env",
+    "examples:work-queues": "cross-env NODE_ENV=dev ts-node-dev --no-notify -r dotenv/config scripts/work-queues.ts dotenv_config_path=./config/.env",
     "code:fix": "concurrently \"yarn tslint:run\" \"yarn prettier:run\"",
     "code:check": "concurrently \"yarn prettier:check\" \"yarn tslint:check\" \"yarn tsc:check\"",
     "test": "cross-env TS_NODE_PROJECT=\\\"tsconfig.test.json\\\" node -r dotenv/config ./node_modules/mocha/bin/_mocha dotenv_config_path=./config/.env.test --opts mocha.opts",
@@ -38,7 +38,6 @@
     "cross-env": "^5.1.4",
     "mocha": "^5.1.1",
     "nyc": "^14.1.1",
-    "pino-pretty": "^3.2.0",
     "prettier": "^1.13.4",
     "rimraf": "^2.6.2",
     "ts-node-dev": "^1.0.0-pre.40",
