--- a/package.json
+++ b/package.json
@@ -18,11 +18,7 @@
     "examples:publish-subscribe": "cross-env NODE_ENV=dev ts-node-dev --no-notify -r dotenv/config scripts/publish-subscribe.ts dotenv_config_path=./config/.env",
     "examples:work-queues": "cross-env NODE_ENV=dev ts-node-dev --no-notify -r dotenv/config scripts/work-queues.ts dotenv_config_path=./config/.env",
     "code:fix": "concurrently \"yarn tslint:run\" \"yarn prettier:run\"",
-    "code:check": "concurrently \"yarn prettier:check\" \"yarn tslint:check\" \"yarn tsc:check\"",
-    "test": "cross-env TS_NODE_PROJECT=\\\"tsconfig.test.json\\\" node -r dotenv/config ./node_modules/mocha/bin/_mocha dotenv_config_path=./config/.env.test --opts mocha.opts",
-    "test:cover": "cross-env node -r dotenv/config ./node_modules/nyc/bin/nyc.js --check-coverage ./node_modules/mocha/bin/_mocha dotenv_config_path=./config/.env.test --opts mocha.opts",
-    "start": "node -r dotenv/config dist/src/index.js dotenv_config_path=./config/.env",
-    "clean": "concurrently 'rm -rf dist' 'rm -rf coverage' 'rm -rf .nyc_output'"
+    "code:check": "concurrently \"yarn prettier:check\" \"yarn tslint:check\" \"yarn tsc:check\""
   },
   "dependencies": {
     "amqplib": "^0.5.5",
@@ -30,14 +26,9 @@
   },
   "devDependencies": {
     "@types/amqplib": "^0.5.13",
-    "@types/chai": "^4.1.3",
-    "@types/mocha": "^5.2.1",
     "@types/node": "^12.7.1",
-    "chai": "^4.1.2",
     "concurrently": "^4.1.0",
     "cross-env": "^5.1.4",
-    "mocha": "^5.1.1",
-    "nyc": "^14.1.1",
     "prettier": "^1.13.4",
     "rimraf": "^2.6.2",
     "ts-node-dev": "^1.0.0-pre.40",
@@ -46,31 +37,5 @@
     "tslint-config-prettier": "^1.13.0",
     "tslint-eslint-rules": "^5.3.1",
     "typescript": "^3.5.3"
-  },
-  "nyc": {
-    "per-file": true,
-    "lines": 80,
-    "functions": 100,
-    "require": [
-      "ts-node/register"
-    ],
-    "extension": [
-      ".ts"
-    ],
-    "include": [
-      "src/*.ts",
-      "src/**/*.ts"
-    ],
-    "exclude": [
-      "**/node_modules/**",
-      "**/**/**test.ts"
-    ],
-    "all": true,
-    "reporter": [
-      "html",
-      "text",
-      "lcov"
-    ],
-    "report-dir": "coverage"
   }
 }
